--- a/Hospital management frontend/src/style.css
+++ b/Hospital management frontend/src/style.css
@@ -42,8 +42,7 @@ h1 {
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+ 
   will-change: filter;
   transition: filter 300ms;
 }
